# MAS

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_voice.py  test_ws.py
_stitch/: DESIGN.md
_stitch/dubai_ai_travel_dashboard/: code.html
_stitch/luxetravel_ai_dashboard/: code.html
docs/: ProblemStatement.txt  architecture.md  edge_cases.md  eval-report.md  eval.md  implementation-plan.md  problemStatement.md  prompt-changelog.md
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts
scratch/: test_gemini.py  test_pipeline.py  test_ws.py
src/: config.py  main.py
src/agents/: __init__.py  budget.py  destination.py  logistics.py  orchestrator.py  review.py  voice.py
src/data/: dubai_attractions.json  dubai_budget_tiers.json  dubai_food.json  dubai_hotels.json  dubai_neighborhoods.json  dubai_shopping.json  dubai_transport.json  wikivoyage_cache.html
src/data/dubai/: district_bur_dubai.html  district_deira.html  district_jebel_ali.html  (+8 more)
src/graph/: builder.py  nodes.py  state.py
src/models/: budget.py  destination.py  itinerary.py  logistics.py  request.py  review.py
src/prompts/: budget.md  destination.md  logistics.md  orchestrator.md  review.md  voice.md
src/tools/: __init__.py  currency.py  hotels.py  maps.py  scraper.py  search.py  tts.py
src/utils/: decorators.py  groq_rotator.py  logger.py  streaming.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_models.py  test_orchestrator.py  test_seed_data.py
(+20 files in other folders)
