[tool.poetry]
name = "ai-travel-planner"
version = "0.2.0"
description = "Multi-Agent System for AI Travel Planning"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = "^0.30"
langchain = "^0.3"
langgraph = "^0.4"
langchain-groq = "^0.3"
langchain-google-genai = "^2.0.0"
pydantic = "^2.10"
pydantic-settings = "^2.0"
httpx = "^0.28"
python-dotenv = "^1.1"
beautifulsoup4 = "^4.12"
structlog = "^24.1"
sse-starlette = "^0.10"

[tool.poetry.dev-dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
